Fix : alignmnt 2

--- a/CSS/Account.css
+++ b/CSS/Account.css
@@ -1,5 +1,5 @@
-body {
-    background-color: #eaeaec;
+body,#rightCol {
+    background-color: #e6ebf2!important;
 }
 
 .navbar,
@@ -16,53 +16,22 @@ body {
     color: #568cf9;
 }
 
-div.row_1 {
+div.row_1 ::after {
     background-color: #ffffff;
-    position: relative;
-    transition: all 0.3s ease-in-out;
 }
-
 div.row_1:hover {
     background-color: #6492dc;
     color: aliceblue;
-}
-  
-div.row_1 ::after {
-    content: '';
-    position: absolute;
-    right: -10px; 
-    top: 50%;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid #6492dc;
-    opacity: 0;
- 
-  }
-  
-div.row_1 :hover::after {
-    opacity: 1;
-  }
-  
+} 
 span.icon-menu:hover {
     color: aliceblue;
 }
 
 div.active_row {
-    position: relative;
+  
     background-color: #6492dc;
     color: white;
 }
-div.active_row ::after {
-    content: '';
-    position: absolute;
-    right: -15px; 
-    top: 50%;
-    border-top: 12px solid transparent;
-    border-bottom: 12px solid transparent;
-    border-left: 15px solid #539bf5;
-    opacity: 1;
-    
-  }
 
 a.sidebar {
     background-color: #ffffff;
