--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,3 +1,4 @@
+
 .logo
 {
     color: #90afe4;
@@ -5,4 +6,8 @@
 .logos
 {
     background-color: #6492dc;
+}
+.forms
+{
+    width: 400px;
 }
